--- a/backend/package.json
+++ b/backend/package.json
@@ -13,6 +13,7 @@
     "@prisma/client": "^5.16.1",
     "bcrypt": "^6.0.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "dotenv": "^17.2.3",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2"
